--- a/application/clients/desktop/src/assets/locales/en/translation.json
+++ b/application/clients/desktop/src/assets/locales/en/translation.json
@@ -9,6 +9,8 @@
     "secondary_language":"Secondary Language",
     "cancel":"Cancel",
     "create":"Create",
+    "update":"Update",
+    "delete":"Delete",
     "placeholder_name":"Enter Name",
     "placeholder_appContext":"Enter App Context",
     "placeholder_description":"Enter Description",
@@ -25,5 +27,14 @@
         "en": "English",
         "ta": "தமிழ்",
         "es": "Español"
-    }
+    },
+    "flows":"Flows",
+    "flowComponents": "Flow Components",
+    "microFlows":"Micro Flow",
+    "availableConnectors":"Available Connectors",
+    "componentName":"Component Name",
+    "type":"Type",
+    "sequenceId":"Sequence Id",
+    "devLang":"Development Language"
+
 }
