--- a/application/clients/desktop/src/assets/locales/es/translation.json
+++ b/application/clients/desktop/src/assets/locales/es/translation.json
@@ -37,13 +37,13 @@
     "sequenceId":"ID de secuencia",
     "devLang":"Lenguaje de desarrollo",
     "devFramework":"Marco de desarrollo",
-    "url":"URL",
-    "apiKey":"Clave API",
-    "secretKey":"Llave secreta",
+    "url":"Localizador Uniforme de Recursos",
     "addForSeq":"Añadir secuencia para",
     "microFlowName":"nombre de micro flujo",
     "action":"Acción",
-    "connector":"Conectores"
+    "connector":"Conectores",
+    "project":"proyecto",
+    "flowManager":"gestor de flujo"
 
 
 
