--- a/application/clients/desktop/src/assets/locales/ta/translation.json
+++ b/application/clients/desktop/src/assets/locales/ta/translation.json
@@ -1,6 +1,6 @@
 ﻿{
     "application_title": "Geppetto Builder",
-    "create_project": "திட்டத்தை உருவாக்கவும்",
+    "create_project": "திட்டத்தை உருவாக்கு",
     "name":"பெயர்",
     "label":"விவரத்துணுக்கு",
     "app_context":"பயன்பாட்டு சூழல்",
@@ -20,7 +20,7 @@
     "require_label":"விவரத்துணுக்கு தேவைப்படுகிறது", 
     "require_primaryLanguage":"முதன்மை மொழி தேவைப்படுகிறது", 
     "require_secondaryLanguage":"இரண்டாம் மொழி தேவைப்படுகிறது",
-    "require_appContext":"App Context is required",
+    "require_appContext":"பயன்பாட்டு சூழல் தேவைப்படுகிறது",
     "require_description":"விளக்கம் தேவைப்படுகிறது",
     "placeholder_label":"விவரத்துணுக்கை உள்ளிடவும்",
     "_languages": {
@@ -37,13 +37,13 @@
     "sequenceId":"வரிசை ஐடி",
     "devLang":"மேம்பாட்டு மொழி",
     "devFramework":"வளர்ச்சி கட்டமைப்பு",
-    "url":"URL",
-    "apiKey":"Api திறவுகோல்",
-    "secretKey":"இரகசிய திறவுகோல்",
+    "url":"இணையத்தள முகவரி",
     "addForSeq":"வரிசைமுறை சேர்க்கவும்",
     "microFlowName":"நுண் ஓட்டப் பெயர்",
     "action":"செயல்",
-    "connector":"இணைப்பான்"
+    "connector":"இணைப்பான்",
+    "project":"திட்டம்",
+    "flowManager":"ஓட்ட மேலாளர்"
 
 
 
