linked issue fixed

--- a/application/clients/desktop/src/assets/locales/en/translation.json
+++ b/application/clients/desktop/src/assets/locales/en/translation.json
@@ -44,6 +44,6 @@
     "connector":"Connector",
     "project":"Project",
     "flowManager":"Flow Manager",
-    "defaultConnectors": "Deafult Connectors"
+    "defaultConnectors": "Deafult Connector"
 
 }
