--- a/docs/planning/sprints-2021/01-18-to-01-22.md
+++ b/docs/planning/sprints-2021/01-18-to-01-22.md
@@ -39,3 +39,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Jackson
   - continue with crud generation
   - kt client project
+
+---
+
+## DevOps Assignments
+
+Please note for this one week sprint they need to complete their current assignments starting next sprint they will be expected to complete the tasks that they commit too by the end of the sprint
