changed sprint 1 to match reality

--- a/docs/planning/2021/sprints/sprint 1/01-18-to-01-22.md
+++ b/docs/planning/2021/sprints/sprint 1/01-18-to-01-22.md
@@ -14,23 +14,24 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - JP
   - Fix CSS issues with happy path for HP and Geppetto templates - we need to engage  CSS expert ask Venkat for this person - Note Happy Path should use Bootstrap Grid instead of ag-grid
-    - Start React
     - Fix bugs
-    - work with Arul and George on React
+    - Start React if happy path with professional look UI is completed
 
 - George
-  - React
-    - Fix bugs
-    - Add Red template
+  - Fix bugs supporting the happy path professional looking goal
+  - React - only if there are no more bugs - this is more about planning
+  - Add Red template - lets talk about this - maybe we do this instead of React
 
 - Arul
-  - React
-    - Fix bugs
-    - add another template
+  - Fix bugs supporting the happy path professional looking goal
+  - React - only if there are no more bugs - this is more about planning
+  - Add another template - lets talk about this - maybe we do this instead of React
 
 - Manavalan
-  - help fix bugs
-  - start GithubActions Manager - this will generate GithubActions for generated application build and deployment to AWS NOT using Geppetto creds but instead user creds
+  - finish Bootstrap grid with happy path
+  - help fix bugs - if it makes sense to help
+  - start GithubActions Manager - need to design with Dan first
+    - this will generate GithubActions for generated application build and deployment to AWS NOT using Geppetto creds but instead user creds
 
 - Manikandan
   - continue with typescript learning
