--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -9,32 +9,48 @@ TBD
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - TBD
+  - React
+  - hour of Power add the authorization Mithun/Dharanya code
+    - first need to learn Camunda
+    - need to learn the authorization sub-system
 
 - George
-  - TBD -probably on another project
+  - add red template
+  - React
 
 - Arul
-  - TBD
+  - Fix the menu system
+  - Fix primary/secondary entity issues
+  - Add Template selection at project creation
+  - Fix Social login in Geppetto - with hard coding the toke in the code/repo
 
 - Manavalan
-  - TBD
+  - Two hours per day aws training
+  - create GithubActionsGenManager
+    - first test is to generate github actions for EC2 deployment of generated applications
+    - second test is to generate GithubActions for Fargate deployment of generated applications
 
 - Manikandan
-  - TBD
+  - Finish Firebase with Node generation - this needs new containers for the user db work with devops team for new containers
 
 - Jackson
-  - TBD
+  - Finish Dynamo generation - this needs new containers for the user db work with devops team for new containers
 
 ---
 
 ## DevOps Assignments
 
 - Arunodhayam
-  - TBD
+  - Deploy Geppetto to Fargate
+    - Github actions to deploy Geppetto to Fargate
+  - Support Geppetto live Deployments
 
 - Harishsundhar
-  - TBD
+  - Continue Fargate deployments
+    - start Github actions for generated apps to Fargate
+  - Support Geppetto live Deployments
 
 - Sivasubramanian
-  - TBD
+  - aws training
+  - finish any work with Fargate
+  - Support Geppetto live Deployments
