continue sprint planning

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -18,13 +18,17 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - add red template
   - React
 
-- Arul
+- Arul **it is not expected that Arul can get through all this in one sprint**
   - Fix the menu system
   - Fix primary/secondary entity issues
   - Add Template selection at project creation
   - Fix Social login in Geppetto - with hard coding the toke in the code/repo
-
+  - refactor template code to allow for physical removal of templates for deployments to companies on prem/vpc
+  
 - Manavalan
+  - delegate/oversee activation of Kibana for geppetto live
+    - this should be given to devops team
+    - we need to be able to "see" the logs/bugs etc in live/stage
   - Two hours per day aws training
   - create GithubActionsGenManager
     - first test is to generate github actions for EC2 deployment of generated applications
