finish high level plan for sprint 2

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -1,8 +1,8 @@
 # Sprint plan Tuesday Jan 26 to Friday Feb 05
 
-## Goal of Sprint
+## Goal/notes for Sprint
 
-TBD
+start to get used to deployments to our live system as well as fix bugs that will arise
 
 ## Developer Assignments
 
