modified sprint two plan

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -9,16 +9,19 @@ start to get used to deployments to our live system as well as fix bugs that wil
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - React
+  - bugs
   - hour of Power add the authorization Mithun/Dharanya code
     - first need to learn Camunda
     - need to learn the authorization sub-system
-
+- Mithun
+  - implement authorization in generated applications
+  
 - George
   - add red template
-  - React
+  - bugs
 
 - Arul **it is not expected that Arul can get through all this in one sprint**
+  - bugs
   - Fix the menu system
   - Fix primary/secondary entity issues
   - Add Template selection at project creation
