updating the plan

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -2,7 +2,9 @@
 
 ## Goal/notes for Sprint
 
-start to get used to deployments to our live system as well as fix bugs that will arise
+Create a ticketing applications with Geppetto and iterate on the application to drive bug repair
+
+The ticket application need to run in live in Fargate this will be the basis for testing deployments
 
 ## Developer Assignments
 
@@ -13,26 +15,23 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - hour of Power add the authorization Mithun/Dharanya code
     - first need to learn Camunda
     - need to learn the authorization sub-system
+
 - Mithun
-  - implement authorization in generated applications
-  
+  - implement authorization in generated ticket application
+
+
 - George
-  - add red template
-  - bugs
+  - bugs that come out of the ticket application
 
 - Arul **it is not expected that Arul can get through all this in one sprint**
   - bugs
-  - Fix the menu system
-  - Fix primary/secondary entity issues
-  - Add Template selection at project creation
-  - Fix Social login in Geppetto - with hard coding the toke in the code/repo
-  - refactor template code to allow for physical removal of templates for deployments to companies on prem/vpc
+  - bugs that come out of the ticket application
   
 - Manavalan
+  - Two hours per day aws training
   - delegate/oversee activation of Kibana for geppetto live
     - this should be given to devops team
     - we need to be able to "see" the logs/bugs etc in live/stage
-  - Two hours per day aws training
   - create GithubActionsGenManager
     - first test is to generate github actions for EC2 deployment of generated applications
     - second test is to generate GithubActions for Fargate deployment of generated applications
@@ -41,7 +40,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Finish Firebase with Node generation - this needs new containers for the user db work with devops team for new containers
 
 - Jackson
-  - Finish Dynamo generation - this needs new containers for the user db work with devops team for new containers
+  - moves to fully focus on Video project
 
 ---
 
@@ -61,3 +60,13 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - aws training
   - finish any work with Fargate
   - Support Geppetto live Deployments
+
+  ---
+
+  ## UX
+
+  - Ajit
+
+  - Arun N
+
+  - Murgan
