updates after sprint planning

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -11,19 +11,20 @@ The ticket application need to run in live in Fargate this will be the basis for
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - bugs
+  - bugs based on the ticketing app
   - hour of Power add the authorization Mithun/Dharanya code
     - first need to learn Camunda
     - need to learn the authorization sub-system
 
 - Mithun
   - implement authorization in generated ticket application
+  - use the ticket app as the test app for this functionality
 
 
 - George
   - bugs that come out of the ticket application
 
-- Arul **it is not expected that Arul can get through all this in one sprint**
+- Arul 
   - bugs
   - bugs that come out of the ticket application
   
@@ -39,19 +40,18 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Manikandan
   - Finish Firebase with Node generation - this needs new containers for the user db work with devops team for new containers
 
-- Jackson
-  - moves to fully focus on Video project
-
 ---
 
 ## DevOps Assignments
 
 - Arunodhayam
+  - Deploy ticket app to EC2 or Fargate
   - Deploy Geppetto to Fargate
     - Github actions to deploy Geppetto to Fargate
   - Support Geppetto live Deployments
 
 - Harishsundhar
+  - Deploy ticket app to EC2 or Fargate
   - Continue Fargate deployments
     - start Github actions for generated apps to Fargate
   - Support Geppetto live Deployments
@@ -63,9 +63,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
   ---
 
-  ## UX
+## UX
 
-  - Ajit
+- Ajit
 
   - Arun N
 
