added final updates to sprint plan

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -2,6 +2,8 @@
 
 ## Goal/notes for Sprint
 
+****Note: the sprint actually started on Jan 27 due to Indian holiday on Jan 26**
+
 Create a ticketing applications with Geppetto and iterate on the application to drive bug repair
 
 The ticket application need to run in live in Fargate this will be the basis for testing deployments
