Added the Back button in header for all screens

--- a/application/clients/desktop/src/assets/locales/es/translation.json
+++ b/application/clients/desktop/src/assets/locales/es/translation.json
@@ -11,6 +11,7 @@
     "create":"crear",
     "update":"actualizar",
     "delete":"Borrar",
+    "go_back": "Regresa",
     "placeholder_name":"Ingrese su nombre",
     "placeholder_appContext":"ingrese el contexto de la aplicación",
     "placeholder_description":"introducir descripción",
