--- a/application/clients/desktop/src/assets/locales/en/translation.json
+++ b/application/clients/desktop/src/assets/locales/en/translation.json
@@ -11,6 +11,7 @@
     "create":"Create",
     "update":"Update",
     "delete":"Delete",
+    "go_back": "Go Back",
     "placeholder_name":"Enter Name",
     "placeholder_appContext":"Enter App Context",
     "placeholder_description":"Enter Description",
