--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -13,7 +13,7 @@ The ticket application need to run in live in Fargate this will be the basis for
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - bugs based on the ticketing app - #802, #805 (affects the first gen of tickets), #812
+  - bugs based on the ticketing app - #802, #805, #823 (affects the first gen of tickets), #812
   - hour of Power add the authorization Mithun/Dharanya code #813
     - first need to learn Camunda
     - need to learn the authorization sub-system
@@ -26,19 +26,20 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 
 - George
-  - bugs that come out of the ticket application- #796, #804
+  - bugs that come out of the ticket application- #796, #804, #815,#818
 **getting married on feb 6th-22nd**
 
 - Arul
-  - bugs
+  - bugs #797
   - bugs that come out of the ticket application
   
 - Manavalan
-  - Two hours per day aws training
+  - Two hours per day aws training - #822
   - delegate/oversee activation of Kibana for geppetto live
     - this should be given to devops team
     - we need to be able to "see" the logs/bugs etc in live/stage
-  - create GithubActionsGenManager
+  
+  - create GithubActionsGenManager #787
     - first test is to generate github actions for EC2 deployment of generated applications
     - second test is to generate GithubActions for Fargate deployment of generated applications
 
@@ -66,7 +67,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Sivasubramanian
   - aws training - 2 hrs per day
-  #806  epic
+  #806  epic, #822, #824
 
   - finish any work with Fargate
   - Support Geppetto live Deployments
