continue work on sprint 3 plan

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -14,14 +14,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - JP
   - bugs based on the ticketing app - #802, #805, #823 (affects the first gen of tickets), #812
-  - hour of Power add the authorization Mithun/Dharanya code #813
+  - hour of Power add the authorization Mithun/Dharanya code #813 **had to be suspended due to HP**
     - first need to learn Camunda
     - need to learn the authorization sub-system
 
 
 - Mithun
-  - implement authorization in generated ticket application- #780
-  - use the ticket app as the test app for this functionality
+  - implement authorization in generated ticket application- #780 **done in ticket app**
+  - use the ticket app as the test app for this functionality **on going**
 
 
 
@@ -34,8 +34,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - bugs that come out of the ticket application
   
 - Manavalan
-  - Two hours per day aws training - #822
-  - delegate/oversee activation of Kibana for geppetto live
+  - Two hours per day aws training - #822 **suspended due to HP**
+  - delegate/oversee activation of Kibana for geppetto live **done by devops team Manavalan helped**
     - this should be given to devops team
     - we need to be able to "see" the logs/bugs etc in live/stage
   
@@ -51,7 +51,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 ## DevOps Assignments
 
 - Arunodhayam
-  - Deploy ticket app to EC2 or Fargate
+  - Deploy ticket app to EC2 or Fargate **done**
   - Deploy Geppetto to Fargate
     - Github actions to deploy Geppetto to Fargate
   - Support Geppetto live Deployments
@@ -59,16 +59,15 @@ Please note to look for specifics tasks in Github this just gives the overall go
     getting married on feb 15th - 25th
 
 - Harishsundhar
-  - Deploy ticket app to EC2 or Fargate
+  - Deploy ticket app to EC2 or Fargate**done**
   - Continue Fargate deployments
   #762(completed)
     - start Github actions for generated apps to Fargate
   - Support Geppetto live Deployments
 
 - Sivasubramanian
-  - aws training - 2 hrs per day
+  - aws training - 2 hrs per day**this was paused due to HP**
   #806  epic, #822, #824
-
   - finish any work with Fargate
   - Support Geppetto live Deployments
 #748
@@ -77,11 +76,10 @@ Please note to look for specifics tasks in Github this just gives the overall go
 ## UX
 
 - Ajit
-he will start to create Html/CSS using Grapedrop for the ticketing systems design from Arun
+he will start to create Html/CSS using Grapedrop for the ticketing systems design from Arun**done**
 #811
 - Arun N
 #810
-#809 this is tracking the Geppetto front end redesign
-what are his tasks?
+#809 this is tracking the Geppetto front end redesign**done**
 
-- Murgan
+- Murgan **as of 2/1/2021 has not joined**
