--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -1,40 +1,84 @@
 # Sprint plan Tuesday Feb 09 to Friday Feb 19
 
-## Goal of Sprint
+## Goal/notes for Sprint
 
-TBD
+1. we only have three devs - two of which are leaving the firm in early March
+
+2. complete Ticketing app
+
+3. continue to clean up bugs
+
+4. design new templates
+
+5. complete Fargate work
+
+## UX Assignments
+
+Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+- Arun
+  - design template # 3
+  - design template # 4
+  - design template # 5
+
+- Arjit
+  - produce HTML for template # 3 - use Grapedrop if it makes sense
+  - produce HTML for template # 4 - use Grapedrop if it makes sense
+  - produce HTML for template # 5 - use Grapedrop if it makes sense
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - TBD
-
-- George
-  - TBD -probably on another project
+  - bugs
+  - finish ticketing app
+  - hour of Power add the authorization Mithun/Dharanya code #813
+    - first need to learn Camunda
+    - need to learn the authorization sub-system
 
 - Arul
-  - TBD
+  - bugs
+  - add red template
+  - potential to move into sprint
+    - adding the select template component to the creation project modal - this allows the user to "see" the template they are selecting for their project
+
+- Mithun
+  - finish generator work for auth
+  - finish adding page for creating roles/groups #807
+  - potential to move into sprint
+    - landing screen
+    - analyze shared app manager
 
 - Manavalan
-  - TBD
+  - finish aws deployment manager for generated app
+  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
+  - hour of Power aws training - #822
+
+- George
+  - out the entire sprint getting married
 
 - Manikandan
-  - TBD
-
-- Jackson
   - TBD
 
 ---
 
 ## DevOps Assignments
 
-- Arunodhayam
-  - TBD
-
-- Harishsundhar
-  - TBD
+Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Sivasubramanian
-  - TBD
+  - working with Arunodhayam explore moving Geppetto to fargate
+  - support Geppetto deployments
+  - hour of Power aws training - #what is the task number?
+
+- Harishsundhar
+  - complete fargate cli
+  - complete fargate githubactions
+  - support Geppetto deployments
+
+- Arunodhayam
+  - complete fargate
+    - work with Harishsundhar to complete fargate cli
+    - work with Siva to explore moving Geppetto to fargate - this may not work this is why its an exploration
+  - out the last part of the sprint feb 15th - 25th
