updated sprint 2 compleation notes

--- a/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
+++ b/docs/planning/2021/sprints/sprint 2/01-26-to-02-05.md
@@ -1,5 +1,13 @@
 # Sprint plan Tuesday Jan 26 to Friday Feb 05
 
+## Sprint completion notes
+
+- completed thirty one (31) tasks
+- rolled over forty five (45) tasks
+  - not all rolled tasks were planned for - especially the bugs
+- had successful HP/IBM demo - nothing blew up!
+- had successful demo with Tampa based consulting company
+
 ## Goal/notes for Sprint
 
 ****Note: the sprint actually started on Jan 27 due to Indian holiday on Jan 26**
@@ -18,12 +26,9 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - first need to learn Camunda
     - need to learn the authorization sub-system
 
-
 - Mithun
   - implement authorization in generated ticket application- #780 **done in ticket app**
   - use the ticket app as the test app for this functionality **on going**
-
-
 
 - George
   - bugs that come out of the ticket application- #796, #804, #815,#818
