refinements on sprint 3 plan

--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -2,15 +2,17 @@
 
 ## Goal/notes for Sprint
 
-1. we only have three devs - two of which are leaving the firm in early March
+1. start of BETA-02
 
-2. complete Ticketing app
+2. we only have three devs - two of which are leaving the firm in early March
 
-3. continue to clean up bugs
+3. complete Ticketing app -  main issue to solve is generating the dropdowns
 
-4. design new templates
+4. continue to clean up bugs
 
-5. complete Fargate work
+5. design new templates
+
+6. complete Fargate work
 
 ## UX Assignments
 
@@ -33,6 +35,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - JP
   - bugs
   - finish ticketing app
+    - main issue seems to be generating the dropdowns
   - hour of Power add the authorization Mithun/Dharanya code #813
     - first need to learn Camunda
     - need to learn the authorization sub-system
@@ -45,21 +48,22 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Mithun
   - finish generator work for auth
+    - this may have completed on Saturday day after sprint 2 ended
   - finish adding page for creating roles/groups #807
   - potential to move into sprint
-    - landing screen
-    - analyze shared app manager
+    - landing screen #855
+    - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
 
 - Manavalan
   - finish aws deployment manager for generated app
   - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
   - hour of Power aws training - #822
 
+- Manikandan
+  - continue with firebase gen manager - we should push to complete this!
+
 - George
   - out the entire sprint getting married
-
-- Manikandan
-  - TBD
 
 ---
 
@@ -68,16 +72,19 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Sivasubramanian
+  - add kibana to generated application - can this be done with out a developer?
   - working with Arunodhayam explore moving Geppetto to fargate
   - support Geppetto deployments
-  - hour of Power aws training - #what is the task number?
+  - hour of Power aws training - its an EPIC #806
 
 - Harishsundhar
+  - he needs an hour of power
   - complete fargate cli
   - complete fargate githubactions
   - support Geppetto deployments
 
 - Arunodhayam
+  - he needs an hour of power
   - complete fargate
     - work with Harishsundhar to complete fargate cli
     - work with Siva to explore moving Geppetto to fargate - this may not work this is why its an exploration
