continue refinement of sprint 3 plan

--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -2,11 +2,17 @@
 
 ## Goal/notes for Sprint
 
+We lost key people to either leave or other projects - specifically:
+
+- George leave for Marriage
+- Aruldass other project
+- Manikandan - although not key, adding him to this list for completes
+
 1. start of BETA-02
 
 2. we only have three devs - two of which are leaving the firm in early March
 
-3. complete Ticketing app -  main issue to solve is generating the dropdowns
+3. complete Ticketing app -  main issue to solve is generating the dropdowns, and the business logic needed
 
 4. continue to clean up bugs
 
@@ -40,17 +46,11 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - first need to learn Camunda
     - need to learn the authorization sub-system
 
-- Arul
-  - bugs
-  - add red template
-  - potential to move into sprint
-    - adding the select template component to the creation project modal - this allows the user to "see" the template they are selecting for their project
-
 - Mithun
   - finish generator work for auth
-    - this may have completed on Saturday day after sprint 2 ended
   - finish adding page for creating roles/groups #807
   - potential to move into sprint
+    - add red template
     - landing screen #855
     - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
 
@@ -58,6 +58,17 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - finish aws deployment manager for generated app
   - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
   - hour of Power aws training - #822
+  - if by chance you end up with free time (I doubt it) - start to learn how to add a new template # 3
+
+--
+
+## Exiting the project at the start of Sprint 3
+
+- Arul
+  - bugs
+  - add red template
+  - potential to move into sprint
+    - adding the select template component to the creation project modal - this allows the user to "see" the template they are selecting for their project
 
 - Manikandan
   - continue with firebase gen manager - we should push to complete this!
