final updates on sprint 3 plan

--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -8,9 +8,9 @@ We lost key people to either leave or other projects - specifically:
 - Aruldass other project
 - Manikandan - although not key, adding him to this list for completes
 
-1. start of BETA-02
+1. start of BETA-03
 
-2. we only have three devs - two of which are leaving the firm in early March
+2. we only have two devs 
 
 3. complete Ticketing app -  main issue to solve is generating the dropdowns, and the business logic needed
 
@@ -56,13 +56,16 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Manavalan
   - finish aws deployment manager for generated app
-  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain
+  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain  
   - hour of Power aws training - #822
   - if by chance you end up with free time (I doubt it) - start to learn how to add a new template # 3
 
+- George
+  - out the entire sprint getting married
+
 --
 
-## Exiting the project at the start of Sprint 3
+## Exiting/Leaving the project at the start of Sprint 3
 
 - Arul
   - bugs
@@ -72,9 +75,6 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Manikandan
   - continue with firebase gen manager - we should push to complete this!
-
-- George
-  - out the entire sprint getting married
 
 ---
 
