--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -52,6 +52,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - potential to move into sprint
     - add red template
     - landing screen #855
+    - admin screen - is this needed more than a landing screen?
     - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
 
 - Manavalan
