--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -72,21 +72,30 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Sivasubramanian
   - add kibana to generated application - can this be done with out a developer?
+    - this was halted in favor of git cleanup tool
   - working with Arunodhayam explore moving Geppetto to fargate
+    - this was halted for this sprint as Harish and Arunodhayam have this covered for now
   - support Geppetto deployments
   - hour of Power aws training - its an EPIC #806
 
 - Harishsundhar
   - he needs an hour of power
-  - complete fargate cli
-  - complete fargate githubactions
+    - started on node
+  - Fargate
+    - work was split with Arunodhayam
+    - complete fargate cli
+    - complete fargate githubactions
+    - implement S3 communication to Fargate - currently they are using Nginx for UI need to use S3
   - support Geppetto deployments
 
 - Arunodhayam
   - he needs an hour of power
-  - complete fargate
-    - work with Harishsundhar to complete fargate cli
-    - work with Siva to explore moving Geppetto to fargate - this may not work this is why its an exploration
+    - started on node
+  - Fargate
+    - work was split with Harish
+    - complete fargate cli
+    - complete fargate githubactions
+    - implement S3 communication to Fargate - currently they are using Nginx for UI need to use S3
   - out the last part of the sprint feb 15th - 25th
 
 ## Exiting/Leaving the project at the start of Sprint 3
