started sprint 4 plan

--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -2,6 +2,11 @@
 
 ## Goal/notes for Sprint
 
+1. start BETA-04
+2. Finish first cut of Tickets
+3. start automatic deployments
+4. start solving the recursive UI template problem with GJS
+
 ## UX Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
