--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -1,5 +1,9 @@
 # Sprint plan Tuesday Feb 09 to Friday Feb 19
 
+## Sprint completion notes
+
+1. all the UX tasked rolled over to  next sprint both UX people were assigned other projects
+
 ## Goal/notes for Sprint
 
 We lost key people to either leave or other projects - specifically:
