--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -11,6 +11,16 @@
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- Arun
+  - design template # 3
+  - design template # 4
+  - design template # 5
+
+- Arjit
+  - produce HTML for template # 3 - use Grapedrop if it makes sense
+  - produce HTML for template # 4 - use Grapedrop if it makes sense
+  - produce HTML for template # 5 - use Grapedrop if it makes sense
+
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
