continue sprint 4 planning

--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -25,6 +25,35 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
+- JP
+  - bugs
+  - finish ticketing app
+    - main issue seems to be generating the dropdowns
+  - hour of Power add the authorization Mithun/Dharanya code #813
+    - design how to implement field level RBAC on front end
+    - design how to implement RBAC at the Microservice level
+  - what about Quick Connectors?
+
+
+
+- Mithun
+  - potential to move into sprint
+    - add red template
+    - landing screen #855
+    - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
+
+- Manavalan
+  - finish aws deployment manager for generated app
+  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain  
+  - hour of Power aws training - #822
+
+- George
+  - analyze the issue with recursive algorithm
+    - create a design before we code - we only want to do this once
+    - refactor the template code to allow for the ability to remove a template from the deployment - this is needed to allow for deployments to enterprise customers with only their templates are shipped/deployed - see the HP problem!
+    - the recursive problem is in the same area of the code as the shipping template problem
+
+
 ---
 
 ## DevOps Assignments
