--- a/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
+++ b/docs/planning/2021/sprints/sprint 3/02-09-to-02-19.md
@@ -59,10 +59,11 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
 
 - Manavalan
-  - finish aws deployment manager for generated app
-  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain  
+  - he was out sick Tuesday Feb 16
+  - finish aws deployment manager for generated app - this should have been and EPIC because it rolled over to next sprint
+  - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain - was this started?
   - hour of Power aws training - #822
-  - if by chance you end up with free time (I doubt it) - start to learn how to add a new template # 3
+  - if by chance you end up with free time (I doubt it) - start to learn how to add a new template # 3 - this was silly even to add here - given that the other two task were so large
 
 - George
   - out the entire sprint getting married
