--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -26,15 +26,17 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
-  - bugs
-  - finish ticketing app
-    - main issue seems to be generating the dropdowns
-  - hour of Power add the authorization Mithun/Dharanya code #813
+  - bugs - do we have any that are major blockers?
+  - finish ticketing app - Potential changes could be:
+    - add the css from Arun/Arjit
+    - add ckEditor
+    - add history
+    - add notifications (MailChimp)
+    - add file attachments
+  - hour of Power RBAC - THIS MAYBE MORE IMPORTANT SINCE MITHUN IS LEAVING!
     - design how to implement field level RBAC on front end
     - design how to implement RBAC at the Microservice level
   - what about Quick Connectors?
-
-
 
 - Mithun
   - potential to move into sprint
@@ -53,9 +55,26 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - refactor the template code to allow for the ability to remove a template from the deployment - this is needed to allow for deployments to enterprise customers with only their templates are shipped/deployed - see the HP problem!
     - the recursive problem is in the same area of the code as the shipping template problem
 
-
 ---
 
 ## DevOps Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
+
+
+- Harishsundhar
+  - he needs an hour of power
+  - complete fargate cli
+  - 
+  - support Geppetto deployments
+
+- Arunodhayam
+  - he needs an hour of power
+  - complete fargate
+    - work with Harishsundhar to complete fargate cli
+    - work with Siva to explore moving Geppetto to fargate - this may not work this is why its an exploration
+  - out the last part of the sprint feb 15th - 25th
+
+## Exiting/Leaving the project at the start of Sprint 4
+
+- Siva - moved to a new project on Feb 17 with 3 days left in sprint 3
