--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -26,27 +26,27 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+  - add red template
+  - hour of Power RBAC - THIS IS  MORE IMPORTANT SINCE MITHUN IS LEAVING!
+  - add static type drop down
   - bugs - do we have any that are major blockers?
   - finish ticketing app - Potential changes could be:
-    - add the css from Arun/Arjit
+    - lets talk what is left todo that would be more important than hour of power
     - add ckEditor
     - add history
     - add notifications (MailChimp)
     - add file attachments
-  - hour of Power RBAC - THIS MAYBE MORE IMPORTANT SINCE MITHUN IS LEAVING!
-    - design how to implement field level RBAC on front end
-    - design how to implement RBAC at the Microservice level
-  - what about Quick Connectors?
 
 - Mithun
-  - potential to move into sprint
-    - add red template
-    - landing screen #855
-    - analyze shared app manager - this is how we can "share" the ticket app - this should be done AFTER landing screen
-
+  - finalize RBAC
+    - solve 4 output issue
+    - change from Fetch to something that solves the issue
+    - admin screen?
+  
 - Manavalan
   - finish aws deployment manager for generated app
   - finish analysis of route 53 cli for auto creation of DNS for generated apps using geppettosoftware.io domain  
+  - maybe landing screen (only if auto deployments are completed)
   - hour of Power aws training - #822
 
 - George
@@ -63,17 +63,16 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 
 - Harishsundhar
-  - he needs an hour of power
-  - complete fargate cli
-  - 
+  - complete the Lambda/Repo seven day clean up
   - support Geppetto deployments
+  - Hour of power
+    - continue to learn node - once you finish with Node start with handlebars
 
 - Arunodhayam
-  - he needs an hour of power
-  - complete fargate
-    - work with Harishsundhar to complete fargate cli
-    - work with Siva to explore moving Geppetto to fargate - this may not work this is why its an exploration
-  - out the last part of the sprint feb 15th - 25th
+  - solve the volume issue in fargate
+  - support geppetto deployments
+  - hour of power
+    - learn node
 
 ## Exiting/Leaving the project at the start of Sprint 4
 
