updates for sprint plan

--- a/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
+++ b/docs/planning/2021/sprints/sprint 4/02-23-to-03-05.md
@@ -55,6 +55,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - refactor the template code to allow for the ability to remove a template from the deployment - this is needed to allow for deployments to enterprise customers with only their templates are shipped/deployed - see the HP problem!
     - the recursive problem is in the same area of the code as the shipping template problem
 
+- Vignesh
+
 ---
 
 ## DevOps Assignments
